@@ -1328,6 +1328,8 @@ src/plugins/LandauZenerCrossing.cpp -text
 src/plugins/Marquardt.cpp -text
 src/plugins/MesmerILT.cpp -text
 src/plugins/Morse.cpp -text
+src/plugins/MultiHinderedRotorPotential.cpp -text
+src/plugins/MultiHinderedRotorPotential.h -text
 src/plugins/PhaseIntegrals.cpp -text
 src/plugins/PhaseIntegrals.h -text
 src/plugins/Potential1D.cpp -text
