@@ -247,54 +247,4 @@ namespace mesmer
     return sum;
   }
 
-  // Read a coupled hindering potential.
-  bool HinderedRotorUtils::ReadMultiHinderedRotorPotential(PersistPtr pp) {
-
-    const char* p = pp->XmlReadValue("units", optional);
-    string units = p ? p : "kJ/mol";
-
-    vector<double> potential;
-    vector<vector<double> > angles;
-    set_Expansion(pp->XmlReadInteger("expansionSize", optional));
-
-    // Check if sine terms are to be used.
-    set_UseSinTerms(pp->XmlReadBoolean("useSineTerms") || pp->XmlReadBoolean("UseSineTerms"));
-
-    while (pp = pp->XmlMoveTo("me:PotentialPoint"))
-    {
-      vector<double> tangles;
-      const char* txt = pp->XmlReadValue("angles");
-      istringstream anglesTxt(txt);
-      double angle(0.0);
-      while (anglesTxt >> angle) {
-        tangles.push_back(angle);
-      }
-      angles.push_back(tangles);
-
-      // Check for a consistent number of angles.
-      if (angles[0].size() != tangles.size()) {
-        cerr << "The number of angles is not the same for one row of a multi-hindered rotor potential definition." << endl;
-        return false;
-      }
-
-      double potentialPoint = pp->XmlReadDouble("potential", optional);
-      if (IsNan(potentialPoint))
-        potentialPoint = 0.0;
-      potentialPoint = getConvertedEnergy(units, potentialPoint);
-      potential.push_back(potentialPoint);
-    }
-
-    return true;
-  }
-
-  // Calculate multi-hindered rotor potential.
-  double HinderedRotorUtils::CalculateMHRPotential() const {
-
-    double sum(0.0);
-    
-    return sum;
-  }
-
-
-
 }//namespace
