@@ -1,3 +1,8 @@
+2023-Dec-23 Struan Robertson
+
+		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Initial 
+		implementation of coupled hindered rotor potential.
+
 2023-Dec-18 Struan Robertson
 
 		*  CollisionOperator.h/.cpp, System.cpp: Implementation of the effective 
